test/success/nostd/basics/trait_method_call/main.sk
module Main {

struct Foo {
}

trait Baz[T] {
    fn baz(t: T) {

    }
}

instance Baz[Foo] {
    fn baz(t: Foo) {

    }
}

fn main() {
    let f = Foo();
    baz(f);
    f.baz();
}

}