test/errors/dropcheck/move_in_loop/main.sk
module Main {

struct Foo {

}

fn sink[T](i: T) {

}

fn main() {
    let f = Foo();
    loop {
        sink(f);
    }
}

}